refactor: Apply Java version migration aids